using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.SceneManagement;

public class tf : MonoBehaviour
{
    public Animator woo;
    public Animator ioo;
    public Animator yoo;
    public AudioSource y;

    public void jj()
    {
        y.Play();
    }
    public void jp()
    {
        y.Stop();
    }
    public void tf1()
    {
        woo.SetTrigger("t1");
    }
    public void tf2()
    {
        woo.SetTrigger("t2");
    }
    public void tf3()
    {
        woo.SetTrigger("t3");
    }
    public void tf4()
    {
        woo.SetTrigger("t4");
    }
    public void tf5()
    {
        woo.SetTrigger("t5");
    }
    public void tf6()
    {
        woo.SetTrigger("t6");
    }
    public void tf7()
    {
        woo.SetTrigger("t7");
    }
    public void tf8()
    {
        woo.SetTrigger("t8");
    }
    public void tf9()
    {
        woo.SetTrigger("t9");
    }
    public void tf10()
    {
        woo.SetTrigger("t10");
    }
    public void tf11()
    {
        woo.SetTrigger("t11");
    }
    public void tf12()
    {
        woo.SetTrigger("t12");
    }
    public void pindh()
    {
        SceneManager.LoadScene(SceneManager.GetActiveScene().buildIndex + 1);
    }
    public void kdp()
    {
        ioo.SetTrigger("kdp");
    }
    public void oo()
    {
        ioo.SetTrigger("oo");
    }
    public void oon()
    {
        yoo.SetTrigger("sbb");
    }
}
